--- a/payment-manifest.json
+++ b/payment-manifest.json
@@ -1,7 +1,3 @@
 {
-  "android": [{
-    "package": "com.samsung.android.spay.payment",
-    "version": 1,
-    "sha256_cert_fingerprints": ["14:6D:E9:83:C5:73:06:50"]
-  }]
+  "default_applications": ["https://rsolomakhin.github.io/bobpay/spay-app.json"]
 }
