--- a/payment-manifest.json
+++ b/payment-manifest.json
@@ -1,3 +1,3 @@
 {
-  "default_applications": ["https://rsolomakhin.github.io/bobpay/spay-app.json"]
+  "default_applications": ["https://tbwoody.github.io/woodypaytest/spay-app.json"]
 }
